fix(navbar): dont show locale toggle when still loading from cms

--- a/packages/web/src/app/shell/navbar/navbar.component.html
+++ b/packages/web/src/app/shell/navbar/navbar.component.html
@@ -48,8 +48,8 @@
       </li>
     </ul>
     <!-- TODO: Make sticky at bottom of navbar over blur -->
-    <elvia-divider className="e-mt-16" *ngIf="showLocaleToggle"></elvia-divider>
-    <div class="navbar-locale-toggle" *ngIf="showLocaleToggle">
+    <elvia-divider className="e-mt-16" *ngIf="isLoaded && showLocaleToggle"></elvia-divider>
+    <div class="navbar-locale-toggle" *ngIf="isLoaded && showLocaleToggle">
       <button
         class="e-btn e-btn--tertiary"
         (click)="setLocale('en-GB')"
