fix(navbar): fix isMainPage divider in sidemenu

--- a/packages/web/src/app/shell/navbar/navbar.component.html
+++ b/packages/web/src/app/shell/navbar/navbar.component.html
@@ -37,11 +37,7 @@
           </div>
         </div>
         <div
-          *ngIf="
-            navbarItem.isMainPage &&
-            navbarItem.isMainPage['en-GB'] &&
-            (!navbarList[i + 1].isMainPage || !navbarList[i + 1].isMainPage['en-GB'])
-          "
+          *ngIf="navbarItem.isMainPage && !navbarList[i + 1].isMainPage"
           style="height: 1px"
           class="e-mt-16 e-ml-16 e-mr-16 e-bg-grey-10"
         ></div>
