feat(ceg): adjust with on counter component

--- a/packages/web/src/app/shared/component-documentation/ceg/controls/counter/counter.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/counter/counter.component.html
@@ -15,7 +15,7 @@
     </span>
   </button>
 
-  <div class="value e-text-md e-text-center">{{ counter.value }}{{ counter.postfix }}</div>
+  <div class="value e-text-sm e-text-center">{{ counter.value }}{{ counter.postfix }}</div>
 
   <button
     class="e-btn e-btn--icon e-btn--circled e-btn--sm"
