--- a/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
@@ -8,7 +8,9 @@
 
 <!--BODY-->
 <div class="page-body">
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-ceg>
+    <app-chip-ceg />
+  </app-ceg>
 
   <!-- TYPE -->
   <app-component-section [sectionTitle]="'Type'">
