--- a/packages/web/src/app/doc-pages/components/chip-doc/chip-ceg/chip-ceg.component.html
+++ b/packages/web/src/app/doc-pages/components/chip-doc/chip-ceg/chip-ceg.component.html
@@ -1,1 +1,1 @@
-<elvia-chip (isSelectedOnChange)="handleOnChange($any($event).detail.value)"></elvia-chip>
+<elvia-chip [isSelected]="true" (isSelectedOnChange)="handleOnChange($any($event).detail.value)" />
