--- a/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
@@ -9,13 +9,9 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
-  <app-component-example-generator
-    [componentData]="componentData"
-    [accordionCustom]="true"
-    [delayInnerHtml]="true"
-    overflowY="auto"
-    [alignedTop]="true"
-  ></app-component-example-generator>
+  <app-ceg>
+    <app-accordion-ceg />
+  </app-ceg>
 
   <!--Type-->
   <app-component-section [sectionTitle]="'Type'">
@@ -68,11 +64,6 @@
           /
           <code>onClose</code>
           events to control the state of the accordions.
-          <app-component-example-generator
-            [componentData]="$any(accordionGroupData)"
-            [inlineExample]="true"
-            [tabIdPrefix]="'accordion-group'"
-          ></app-component-example-generator>
         </ng-container>
       </app-component-subsection>
     </ng-container>
