--- a/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
@@ -7,7 +7,9 @@
 </app-component-header>
 
 <div class="page-body">
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-ceg>
+    <app-badge-ceg></app-badge-ceg>
+  </app-ceg>
 
   <!--IMPLEMENTATION-->
   <app-component-section [sectionTitle]="'Implementation'">
