--- a/packages/web/src/app/doc-pages/components/box-doc/box-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/box-doc/box-doc.component.html
@@ -8,8 +8,9 @@
 
 <!--BODY-->
 <div class="page-body e-mt-72">
-  <!--CEG-->
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-ceg>
+    <app-box-ceg></app-box-ceg>
+  </app-ceg>
 
   <!--USAGE-->
   <app-component-section [sectionTitle]="'Usage'">
