--- a/packages/web/src/app/doc-pages/components/box-doc/box-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/box-doc/box-doc.component.html
@@ -20,13 +20,13 @@
         <ng-container ngProjectAs="sectionContent">
           <app-component-subsubsection [sectionTitle]="'Title outside'">
             <ng-container ngProjectAs="sectionContent">
-              The title option can be used when a header is useful.
+              You can use the title option when you need a header.
             </ng-container>
           </app-component-subsubsection>
           <app-component-subsubsection [sectionTitle]="'Colored'">
             <ng-container ngProjectAs="sectionContent">
-              The box with a colored line should be used if you want the box to take more attention, but
-              should not be used with multiple boxes on the same page.
+              If you want the box to take more attention, use the box with a colored line, but avoid using it
+              with multiple boxes on the same page.
             </ng-container>
           </app-component-subsubsection>
         </ng-container>
