docs(accordion): add static ceg example

--- a/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
@@ -64,6 +64,9 @@
           /
           <code>onClose</code>
           events to control the state of the accordions.
+          <app-static-ceg>
+            <app-accordion-group-ceg />
+          </app-static-ceg>
         </ng-container>
       </app-component-subsection>
     </ng-container>
