--- a/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/context-menu-doc/context-menu-doc.component.html
@@ -9,6 +9,9 @@
 <!--BODY-->
 <div class="page-body e-mt-72">
   <!--CEG-->
+  <app-ceg>
+    <app-context-menu-ceg></app-context-menu-ceg>
+  </app-ceg>
 
   <!--STRUCTURE-->
   <app-component-section [sectionTitle]="'Structure'">
