--- a/packages/web/src/app/doc-pages/components/box-doc/box-ceg/box-ceg.component.html
+++ b/packages/web/src/app/doc-pages/components/box-doc/box-ceg/box-ceg.component.html
@@ -1,15 +1,3 @@
 <elvia-box>
-  <div slot="content">
-    <i class="e-icon e-icon--powermeter-color e-icon--xxl" aria-hidden="true"></i>
-
-    <div class="e-form-field e-mt-32">
-      <label class="e-form-field__label" for="meter-reading">Målerstand</label>
-      <div class="e-input">
-        <input id="meter-reading" placeholder="Din siste målerstand" />
-      </div>
-    </div>
-    <button class="e-btn e-w-100 e-mt-24">
-      <span class="e-btn__title">Send inn</span>
-    </button>
-  </div>
+  <div slot="content">Your content here</div>
 </elvia-box>
