--- a/packages/web/src/app/doc-pages/components/box-doc/box-ceg/box-ceg.component.scss
+++ b/packages/web/src/app/doc-pages/components/box-doc/box-ceg/box-ceg.component.scss
@@ -3,3 +3,24 @@ i {
   margin-left: auto;
   margin-right: auto;
 }
+
+div {
+  /* rett fra figma, tester bare */
+  display: grid;
+  place-items: center;
+
+  height: 100%;
+  min-height: 100px;
+  min-width: 100px;
+  background: #fafafa;
+  border: 1px dashed #a8a8a8;
+
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 120%;
+  color: #a8a8a8;
+  letter-spacing: 0.8px;
+  text-transform: uppercase;
+}
