--- a/packages/web/src/app/doc-pages/components/box-doc/box-ceg/box-ceg.component.scss
+++ b/packages/web/src/app/doc-pages/components/box-doc/box-ceg/box-ceg.component.scss
@@ -12,10 +12,11 @@ div {
   height: 100%;
   min-height: 100px;
   min-width: 100px;
-  background: #fafafa;
-  border: 1px dashed #a8a8a8;
+  /*   background: #fafafa;
+ */
+  border: 2px dashed #a8a8a8;
 
-  font-family: 'Red Hat Text';
+  font-family: 'Red Hat Text', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
