refactor(ceg): split code generator into static and dynamic code generation

--- a/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
@@ -19,7 +19,7 @@
     (propChange)="setPropValue($event.propName, $event.value)"
   />
 
-  <app-code-generator
+  <app-dynamic-code-generator
     class="code-generator"
     [controlManager]="componentExample.cegContent"
     [elementName]="componentExample.elementName"
