--- a/packages/web/src/app/shared/component-documentation/ceg/static-ceg/static-ceg.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/static-ceg/static-ceg.component.html
@@ -3,5 +3,5 @@
     <ng-content />
   </div>
 
-  <app-code-generator [staticContent]="staticContent.html" />
+  <app-static-code-generator [staticContent]="staticContent.html" />
 </div>
