--- a/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/controls/controls.component.html
@@ -1,5 +1,5 @@
 <fieldset class="e-strip-fieldset" *ngFor="let group of groups">
-  <legend class="e-text-sm-strong e-mb-8">{{ group.name }}</legend>
+  <legend class="fieldset-legend e-text-sm-strong">{{ group.name }}</legend>
 
   <ng-container *ngFor="let control of group.controls | keyvalue : noSort">
     <ng-container [ngSwitch]="control.value.type">
