--- a/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
+++ b/packages/web/src/app/shared/component-documentation/ceg/ceg.component.html
@@ -1,4 +1,4 @@
-<div class="e-mb-48 e-mt-72" class="ceg-container">
+<div class="ceg-container">
   <div class="ceg-header e-mb-8" *ngIf="hasMultipleComponentTypes | async">
     <app-type-switcher [controlManager]="componentExample.cegContent" />
   </div>
@@ -19,7 +19,7 @@
     (propChange)="setPropValue($event.propName, $event.value)"
   />
 
-  <app-code-generator
+  <app-dynamic-code-generator
     class="code-generator"
     [controlManager]="componentExample.cegContent"
     [elementName]="componentExample.elementName"
