feat(carousel): add 'app-carousel-ceg'

--- a/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
@@ -9,10 +9,9 @@
 <!--BODY-->
 <div class="page-body">
   <!--CEG-->
-  <app-component-example-generator
-    [componentData]="componentData"
-    [height]="'580'"
-  ></app-component-example-generator>
+  <app-ceg>
+    <app-carousel-ceg></app-carousel-ceg>
+  </app-ceg>
 
   <!--USAGE-->
   <app-component-section [sectionTitle]="'Usage'">
