docs(carousel): change class="keyboard-button" to kbd

--- a/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/carousel-doc/carousel-doc.component.html
@@ -50,13 +50,13 @@
         <ng-container ngProjectAs="sectionContent">
           <div class="accessibility-keyboard-navigation">
             <div>
-              <span class="keyboard-button">ArrowLeft/ArrowRight</span>
+              <kbd>ArrowLeft/ArrowRight</kbd>
               to navigate through the arrows and pages.
             </div>
             <div>
-              <span class="keyboard-button">Space</span>
+              <kbd>Space</kbd>
               or
-              <span class="keyboard-button">Enter</span>
+              <kbd>Enter</kbd>
               to select a carousel page.
             </div>
           </div>
